src/test/deca/context/invalid/objet/double.deca
// This class is already defined
// Description : Test avec redéfinition de classe
// Resultat : erreur ligne 9


class A {

}
class A {

}